--- a/templates/login.html
+++ b/templates/login.html
@@ -8,10 +8,10 @@
 </div>
 <div >
 <div >
-				<input type="text"  value="" placeholder="username" name="username">
+			username <input type="text"  value="" placeholder="username" name="username">
 <label  for="login-name"></label></div>
 <div >
-				<input type="password"  value=""  placeholder="password" name="password">
+				password <input type="password"  value=""  placeholder="password" name="password">
 <label  for="login-pass"></label></div>
 <input type="submit" value="Log in" >
 
