--- a/templates/table2.html
+++ b/templates/table2.html
@@ -129,10 +129,31 @@
           </a>
         </td>
           <td>
-          <a href="#" ng-click="sortType = 'perpupilbyschooltype'; sortReverse = !sortReverse">
-          perpupilbyschooltype
-            <span ng-show="sortType == 'perpupilbyschooltype' && !sortReverse" class="fa fa-caret-down"></span>
-            <span ng-show="sortType == 'perpupilbyschooltype' && sortReverse" class="fa fa-caret-up"></span>
+          <a href="#" ng-click="sortType = 'perpupilbyschooltypecalc'; sortReverse = !sortReverse">
+          perpupilbyschooltypecalc
+            <span ng-show="sortType == 'perpupilbyschooltypecalc' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'perpupilbyschooltypecalc' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+        </td>
+          <td>
+          <a href="#" ng-click="sortType = 'perpupilbyschooltypedefault'; sortReverse = !sortReverse">
+          perpupilbyschooltypedefault
+            <span ng-show="sortType == 'perpupilbyschooltypedefault' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'perpupilbyschooltypedefault' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+        </td>
+          <td>
+          <a href="#" ng-click="sortType = 'perpupilbyschooltypedifference'; sortReverse = !sortReverse">
+          perpupilbyschooltypedifference
+            <span ng-show="sortType == 'perpupilbyschooltypedifference' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'perpupilbyschooltypedifference' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+        </td>
+          <td>
+              <a href="#" ng-click="sortType = 'perpupilbyschooltypeanddistricttype'; sortReverse = !sortReverse">
+          perpupilbyschooltypeanddistricttype
+            <span ng-show="sortType == 'perpupilbyschooltypeanddistricttype' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'perpupilbyschooltypeanddistricttype' && sortReverse" class="fa fa-caret-up"></span>
           </a>
         </td>
           <td>
@@ -193,10 +214,24 @@
           </a>
         </td>
            <td>
-          <a href="#" ng-click="sortType = 'sumofBSLcalcperpupil'; sortReverse = !sortReverse">
-          sumofBSLcalcperpupil
-            <span ng-show="sortType == 'sumofBSLcalcperpupil' && !sortReverse" class="fa fa-caret-down"></span>
-            <span ng-show="sortType == 'sumofBSLcalcperpupil' && sortReverse" class="fa fa-caret-up"></span>
+          <a href="#" ng-click="sortType = 'sumofBSLcalcperpupilcalc'; sortReverse = !sortReverse">
+          sumofBSLcalcperpupilcalc
+            <span ng-show="sortType == 'sumofBSLcalcperpupilcalc' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'sumofBSLcalcperpupilcalc' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+        </td>
+          <td>
+          <a href="#" ng-click="sortType = 'sumofBSLcalcperpupildefault'; sortReverse = !sortReverse">
+          sumofBSLcalcperpupildefault
+            <span ng-show="sortType == 'sumofBSLcalcperpupildefault' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'sumofBSLcalcperpupildefault' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+        </td>
+          <td>
+          <a href="#" ng-click="sortType = 'sumofBSLcalcperpupildifference'; sortReverse = !sortReverse">
+          sumofBSLcalcperpupildifference
+            <span ng-show="sortType == 'sumofBSLcalcperpupildifference' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'sumofBSLcalcperpupildifference' && sortReverse" class="fa fa-caret-up"></span>
           </a>
         </td>
           <td>
@@ -221,10 +256,24 @@
           </a>
         </td>
           <td>
-          <a href="#" ng-click="sortType = 'perpupilpertype'; sortReverse = !sortReverse">
-          perpupilpertype
-            <span ng-show="sortType == 'perpupilpertype' && !sortReverse" class="fa fa-caret-down"></span>
-            <span ng-show="sortType == 'perpupilpertype' && sortReverse" class="fa fa-caret-up"></span>
+          <a href="#" ng-click="sortType = 'perpupilpertypecalc'; sortReverse = !sortReverse">
+          perpupilpertypecalc
+            <span ng-show="sortType == 'perpupilpertypecalc' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'perpupilpertypecalc' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+        </td>
+          <td>
+          <a href="#" ng-click="sortType = 'perpupilpertypedefault'; sortReverse = !sortReverse">
+          perpupilpertypedefault
+            <span ng-show="sortType == 'perpupilpertypedefault' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'perpupilpertypedefault' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+        </td>
+          <td>
+          <a href="#" ng-click="sortType = 'perpupilpertypedifference'; sortReverse = !sortReverse">
+          perpupilpertypedifference
+            <span ng-show="sortType == 'perpupilpertypedifference' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'perpupilpertypedifference' && sortReverse" class="fa fa-caret-up"></span>
           </a>
         </td>
         <td>
@@ -575,7 +624,10 @@
           <td>{{ roll.schooltype }}</td>
           <td>{{ roll.admbyschooltype }}</td>
           <td>{{ roll.bslbyschooltype }}</td>
-          <td>{{ roll.perpupilbyschooltype }}</td>
+          <td>{{ roll.perpupilbyschooltypecalc }}</td>
+        <td>{{ roll.perpupilbyschooltypedefault }}</td>
+        <td>{{ roll.perpupilbyschooltypedifference }}</td>
+        <td>{{ roll.perpupilbyschooltypeanddistricttype }}</td>
           <td>{{ roll.LEABaseLevel }}</td>
 
           <td  >{{ roll.BSLcalc }}</td>
@@ -586,12 +638,16 @@
           <td>{{ roll.SumofBSLcalc }}</td>
           <td>{{ roll.SumofBSLoriginal }}</td>
           <td>{{ roll.SumofBSLdifference }}</td>
-          <td>{{ roll.sumofBSLcalcperpupil }}</td>
+          <td>{{ roll.sumofBSLcalcperpupilcalc }}</td>
+        <td>{{ roll.sumofBSLcalcperpupildefault }}</td>
+        <td>{{ roll.sumofBSLcalcperpupildifference }}</td>
         <td>{{ roll.Type}}</td>
           <td >{{ roll.bslbytype}}</td>
           <td>{{ roll.admbytype}}</td>
-          <td>{{ roll.perpupilpertype}}</td>
-          <td>{{ roll.NoStateAidDistrict}}</td>
+          <td>{{ roll.perpupilpertypecalc}}</td>
+        <td>{{ roll.perpupilpertypedefault}}</td>
+        <td>{{ roll.perpupilpertypedifference}}</td>
+        <td>{{ roll.NoStateAidDistrict}}</td>
 
 
           <td>{{ roll.TotalLocalLevycalc }}</td>
